removed gap to resolve margin error

--- a/dashboard.css
+++ b/dashboard.css
@@ -23,7 +23,7 @@
 .section1 {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    
 }
 .section1 div {
     display: flex;
